fix: fix index.html
Signed-off-by: Eric-chuan <ericchuan1997@gmail.com>

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                     More Research
                 </a>
                 <div class="navbar-dropdown">
-                    <a class="navbar-item" href="https://github.com/PixelAI-Team.github.io/TaoAvatar/">
-                        GaussianTalker
+                    <a class="navbar-item" href="https://PixelAI-Team.github.io/TaoAvatar/">
+                      TaoAvatar
                     </a>
                 </div>
             </div>
